# videoanalyzer

./: .gitignore
.github/workflows/: build-edge-module.yml
src/: Dockerfile.amd64
src/samples/videoanalyzer-cli/: Pipfile  operations.json  operations_iothub_sink.json  setup.cfg  topology.json  topology_iothub_sink.json
src/samples/videoanalyzer-cli/videoanalyzer/cli/: app.py
src/videoanalyzer/: Pipfile  setup.cfg
src/videoanalyzer-edge/: Pipfile  setup.cfg
src/videoanalyzer-edge/videoanalyzer/edge/: app.py  video_analyzer_edge_module.py
videoanalyzer/: Pipfile  setup.cfg
videoanalyzer-edge/: setup.cfg
videoanalyzer-edge/videoanalyzer-edge/: video_analyzer_edge_module.py
videoanalyzer/pipeline/: __init__.py  _node.py  pipeline.py
videoanalyzer/pipeline/tests/: test_node.py  test_pipeline.py  test_tree_builder.py
videoanalyzer/processor/: __init__.py  httpextension.py  signalprocessor.py
videoanalyzer/samples/record-live-video/: record_locally.py
videoanalyzer/samples/simple-http-server/: main.py
videoanalyzer/sink/: _basesink.py  localimagesink.py  localvideosink.py
videoanalyzer/source/: _basesource.py  opencvsource.py  rtspsource.py
videoanalyzer/source/tests/: test_rtspsource.py
videoanalyzer/tests/pipeline/: test_node.py  test_pipeline.py  test_tree_builder.py  test_treebuilder.py
videoanalyzer/videoanalyzer/pipeline/: pipeline.py
videoanalyzer/videoanalyzer/processor/: _baseprocessor.py  httpextension.py  nullprocessor.py
videoanalyzer/videoanalyzer/sink/: __init__.py
videoanalyzer/videoanalyzer/source/: opencvsource.py
(+31 files in other folders)
