[metadata]
name = videoanalyzer
version = 0.0.1
author = Hiroyuki Hasebe

[options]
packages = find:
install_requires =
    opencv-python >= 4.6.0.66
    opentelemetry-api >= 1.11.1
    opentelemetry-sdk >= 1.11.1
    requests >= 2.28.0
    types-requests >= 2.28.0

[options.packages.find]
exclude =
    tests
    examples

[tool:pytest]
testpaths = tests
