[metadata]
name = videoanalyzer-edge
version = 0.0.1
author = Hiroyuki Hasebe

[options]
zip_safe = False
packages = find:
install_requires =
    azure-iot-device >= 2.7.0
    tenacity

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    videoanalyzer-edge = videoanalyzer.edge.app:main
