[metadata]
name = videoanalyzer-cli
version = 0.0.1
author = Hiroyuki Hasebe

[options]
zip_safe = False
packages = find:
install_requires =
    azure-iot-device >= 2.7.0
    azure-iot-hub >= 2.6.0
    certifi

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    videoanalyzer-cli = videoanalyzer.cli.app:main